# hrtor

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUPPORT.md  flake.nix  rust-toolchain.toml  shell.nix  test_config.lua  treefmt.nix
.github/: CODEOWNERS  CODE_OF_CONDUCT_JP.md  CONTRIBUTING.md  CONTRIBUTING_JP.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  SUPPORT_JP.md
.github/ISSUE_TEMPLATE/: refactoring.md
.github/PULL_REQUEST_TEMPLATE/: features.md
.github/workflows/: coverage-checker.yml  coverall-checker.yml  main-branch-builder.yml  manual-deploy.yml  nix-checker.yml  rust-checker.yml  stale-issues-pullrequests.yml
action/: Cargo.toml
action/src/: add.rs
actions/src/: write.rs
backend/: Cargo.toml
backend/src/: lib.rs
cli/: Cargo.toml
cli/src/: by_clap.rs  lib.rs
constants/: Cargo.toml
constants/src/: lib.rs
core/src/: lib.rs
crates/hrtor_core/src/: lib.rs  parser.rs
crates/hrtor_readline/: Cargo.toml
crates/hrtor_readline/examples/: interpreter.rs
crates/hrtor_readline/src/: lib.rs
file_loader/: .gitignore  Cargo.toml
file_loader/file_loader_derive/: Cargo.toml
file_loader/file_loader_derive/src/: lib.rs
file_loader/src/: lib.rs
frontend/ed-style/: Cargo.toml
hrtor_core/: Cargo.toml  README.md
hrtor_core/src/: constants.rs
manual/: book.toml
manual/src/: Concepts.md  File_structure.md  How_to_install.md  How_to_modify.md  Hrtor_HEAD_Usage.md  Info.md  SUMMARY.md  title-page.md
processor/: Cargo.toml
processor/src/: actions.rs  lib.rs
src/: actions.rs  cli.rs  commands.rs  file_loader.rs  lib.rs  main.rs  processor.rs  user_script.rs
src/actions/: add.rs  del.rs  delete_all.rs  exit.rs  git.rs  grep.rs  open.rs  print.rs  tutorial.rs  write.rs
src/actions/del/: args.pest  parser.rs
src/commands/: io.rs
src/processor/: actions.rs  constants.rs  expr.pest  parser.rs
src/processor/actions/: add.rs  delete_all.rs  exit.rs  grep.rs  open.rs  print.rs  write.rs
src/user_script/: lua.rs
src/user_script/lua/: internal.rs
utils/: Cargo.toml
utils/src/: lib.rs
