[package]
name = "hrtor"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.3.0-dev"
description = "A scalable line editor"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/haruki7049/hrtor"
repository = "https://github.com/haruki7049/hrtor"
keywords = ["editor", "text-editor"]
categories = ["text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"

members = ["./crates/hrtor_core", "./crates/hrtor_readline"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.50"
hrtor_core = { path = "./crates/hrtor_core" }
hrtor_readline = { path = "./crates/hrtor_readline" }
linefeed = "0.6.0"
pest = "2.8.0"
pest_derive = "2.8.0"
